replantamiento del ejercicio entero, estilado, y detalles finales.

--- a/index.html
+++ b/index.html
@@ -7,71 +7,102 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    <header>
-        My Ecommerce
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#">Pizze bianche</a></li>
-            <li><a href="#">Pizze Rosse</a></li>
-            <li><a href="#">Calzone</a></li>
-            <li><a href="#">Pizze dolce</a></li>
-            <li><a href="#">Platters</a></li>
-        </ul>
-    </nav>
-    <div class="grid-container">
-        <div class="grid-item">
-            <div class="card">
-                <img src="./assets/imgs/tartufo-pizza.webp" alt="pizza bianca">
-                <div class="container">
-                    <h4><b>Pizza al Tartufo</b></h4>
-                    <p>Mushrooms, pork sausages, basil and truffle oil.</p>
+        <div class="grid-container">
+            <header>
+                <h2>My E-commerce</h2>
+            </header>
+            <nav>
+                <h3>Categories</h3>
+                <ul>
+                    <li><a href="#">Pizze bianche</a>(2)</li>
+                    <li><a href="#">Pizze Rosse</a>(2)</li>
+                    <li><a href="#">Calzone</a>(0)</li>
+                    <li><a href="#">Pizze dolce</a>(1)</li>
+                    <li><a href="#">Salads</a>(1)</li>
+                </ul>
+            </nav>
+            
+            <div class="grid-item1">
+                <div class="card">
+                    <img src="./assets/imgs/tartufo-pizza.webp" alt="pizza bianca">
+                    <div class="container">
+                        <h4><b>Pizza al Tartufo</b></h4>
+                        <p>Mushrooms, pork sausages, basil and truffle oil.</p>
+                    </div>
+                    <div class="pricing-button">
+                        <button type="button">Buy Now</button>
+                        <h4>26$</h4>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="grid-item">
-            <div class="card">
-                <img src="./assets/imgs/margherita.webp" alt="pizza rossa">
-                <div class="container">
-                    <h4><b>Pizza Margherita</b></h4>
-                    <p>Tomato sauce, mozzarella cheese, basil and olive oil</p>
+            <div class="grid-item2">
+                <div class="card">
+                    <img src="./assets/imgs/margherita.webp" alt="pizza rossa">
+                    <div class="container">
+                        <h4><b>Pizza Margherita</b></h4>
+                        <p>Tomato sauce, mozzarella cheese, basil and olive oil</p>
+                    </div>
+                    <div class="pricing-button">
+                        <button type="button">Buy Now</button>
+                        <h4>26$</h4>
+                    </div>
+                </div>    
+            </div>
+            <div class="grid-item3">
+                <div class="card">
+                    <img src="./assets/imgs/pistachio.webp" alt="Pizza al pistacio">
+                    <div class="container">
+                        <h4><b>Pistaciolla</b></h4>
+                        <p>Pistacio, mozzarella cheese, mordatella al pistacio and ricotta</p>
+                    </div>
+                    <div class="pricing-button">
+                        <button type="button">Buy Now</button>
+                        <h4>26$</h4>
+                    </div>
                 </div>
-        </div>
-        <div class="grid-item">
-            <div class="card">
-                <img src="./assets/imgs/pistachio.webp" alt="Pizza al pistacio">
-                <div class="container">
-                    <h4><b>Pistaciolla</b></h4>
-                    <p>Pistacio, mozzarella cheese, mordatella al pistacio and ricotta</p>
+            </div>
+            <div class="grid-item4">
+                <div class="card">
+                    <img src="./assets/imgs/rocket-salad.webp" alt="rocket salad">
+                    <div class="container">
+                        <h4><b>Rocket-salad</b></h4>
+                        <p>Fresh rocket, extra virgin olive oil and grana padano cheese</p>
+                    </div>
+                    <div class="pricing-button">
+                        <button type="button">Buy Now</button>
+                        <h4>26$</h4>
+                    </div>
                 </div>
-        </div>
-        <div class="grid-item">
-            <div class="card">
-                <img src="./assets/imgs/rocket-salad.webp" alt="rocket salad">
-                <div class="container">
-                    <h4><b>Rocket-salad</b></h4>
-                    <p>Fresh rocket, extra virgin olive oil and grana padano cheese</p>
+            </div>
+            <div class="grid-item5">
+                <div class="card">
+                    <img src="./assets/imgs/prosciutto.webp" alt="prosciutto pizza">
+                    <div class="container">
+                        <h4><b>Fresca</b></h4>
+                        <p>Tomato sauce, mozzarella cheese, rocket, prosciutto and parmesan</p>
+                    </div>
+                    <div class="pricing-button">
+                        <button type="button">Buy Now</button>
+                        <h4>26$</h4>
+                    </div>
                 </div>
-        </div>
-        <div class="grid-item">
-            <div class="card">
-                <img src="./assets/imgs/prosciutto.webp" alt="prosciutto pizza">
-                <div class="container">
-                    <h4><b>Fresca</b></h4>
-                    <p>Tomato sauce, mozzarella cheese, rocket, prosciutto san daniele and grana padano cheese</p>
+            </div>
+            <div class="grid-item6">
+                <div class="card">
+                    <img src="./assets/imgs/pizza-nutella.webp" alt="pizza dolce">
+                    <div class="container">
+                        <h4><b>Pizza nutella</b></h4>
+                        <p>Indulgent nutella spread with sliced strawberrys and icying sugar</p>
+                    </div>
+                    <div class="pricing-button">
+                        <button type="button">Buy Now</button>
+                        <h4>26$</h4>
+                    </div>
                 </div>
+            </div>
+            <footer><h2>@MyE-commerce</h2></footer>
         </div>
-        <div class="grid-item">
-            <div class="card">
-                <img src="./assets/imgs/pizza-nutella.webp" alt="pizza dolce">
-                <div class="container">
-                    <h4><b>Pizza nutella</b></h4>
-                    <p>Indulgent nutella spread with sliced strawberrys and icying sugar</p>
-                </div>
-        </div>
-    </div>
-    <footer>Derechos reservados equisde</footer>
+
 
 </body>
 </html>
